updated readme, plus a few minor tweeks

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 <div class="bg-white h-screen flex flex-row justify-center">
   <div class="flex md:flex-row flex-col justify-center items-center">
   <!--left side-->
- <div class=" justify-center relative w-[350px] h-[300px] md:h-[460px] bg-gradient-to-t p-6  from-[#2e2be9] to-[#7857ff] text-white   rounded-b-3xl md:rounded-3xl  ">
+ <div class=" justify-center relative w-[350px] h-[300px] md:h-[460px] bg-gradient-to-t p-6 md:shadow-xl  from-[#2e2be9] to-[#7857ff] text-white   rounded-b-3xl md:rounded-3xl  ">
   <h1 class="flex justify-center text-2xl  opacity-50">Your Result</h1>
   <div class="rounded-full w-24 h-24 md:w-36 md:h-36 bg-gradient-to-b   flex items-center justify-center mx-auto mt-6">
-    <span class="justify-center items-center text-4xl md:text-5xl font-bold">76 
+    <span class="justify-center items-center text-5xl md:text-7xl font-bold">76 
     
       
-  <div class="flex justify-center items-center text-sm font-light opacity-50"><br>
+  <div class="flex justify-center  text-sm font-light opacity-50">
     of 100</div>
   </div>
 </span>
@@ -113,7 +113,7 @@
 
   
 </div>
-<button class="w-[302px] p-4 my-auto text-white bg-[#303b5a] rounded-3xl hover:bg-gradient-to-t from-[#2e2be9] to-[#7857ff] ">
+<button class="w-[302px] p-4 my-auto mb-2 text-white bg-[#303b5a] rounded-3xl hover:bg-gradient-to-t from-[#2e2be9] to-[#7857ff] duration-300 ">
   Continue
 </button>
 
