added Front Menors Recommendations

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+
+  <title>Frontend Mentor | Results summary component</title>
+  </head>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -26,7 +29,7 @@
   <script src="./fetchData.js"></script>  
 
   
-  <title>Frontend Mentor | Results summary component</title>
+  
 
 <!--result-->
 
